# Flask-labs

./: .gitignore  README.md  app.py  config.py  pyproject.toml  session_4.py  session_7.py
app/: __init__.py  admin.py  auth.py  books.py  models.py
app/templates/: add_book.html  admin_dashboard.html  admin_login.html  admin_register.html  base.html  dashboard.html  edit_book.html  index.html  login.html  register.html  view_books.html
migrations/versions/: 22ea3e0e1172_.py  660c4405a957_initial_migration.py
templates/: add_book.html  admin_dashboard.html  base.html  dashboard.html  edit_book.html  home.html  index.html  login.html  profile.html  register.html  search_student.html  signup.html  view_books.html
